Now includes an internal API (new dependency) and also requires update of the PHP-Snippets dependency The internal "API" is YouTube-Downloader by John Eckman

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "PHP-Snippets"]
 	path = PHP-Snippets
 	url = https://github.com/Kakadua/PHP-Snippets
+[submodule "YouTube-Downloader"]
+	path = YouTube-Downloader
+	url = https://github.com/jeckman/YouTube-Downloader
